    pointing at offset 64bit of a block, when the first 8 bytes contains
    the block size - 8. This is e.g. used by sqlite3MemMalloc.
  - if a syscall param (e.g. bind struct sockaddr, sendmsg struct msghdr,
    ...) has several fields not initialised, an error is now reported for
    each field. Previously, an error was reported only for the first wrong
    field.

* Helgrind:
  - Race condition error message with allocated blocks also show
    the thread nr that allocated the racy block.
  - All locks referenced by an error message are now announced.
    Previously, some error messages were just showing the lock addresses.
  - The message indicating where a lock was first observed now also
    describes the address/location of the lock.
  - Helgrind now understands the Ada task termination rules
    and creates a 'H-B relationship' between a terminated task and
    its master. This avoids some false positive and avoids big
    memory usage when a lot of Ada tasks are created and terminated.
    The interceptions are only activated with forthcoming releasses of
    gnatpro >= 7.3.0w-20140611 and gcc >= 5.0.
  - Helgrind GDB server monitor command 'info locks' giving
    the list of locks, their location, and their status.

* Callgrind:
  - callgrind_control now supports the --vgdb-prefix argument,
    which is needed if valgrind was started with this same argument.

* ==================== OTHER CHANGES ====================

* Better stacktraces and suppression matching for inlined function calls.
  The new option --read-inline-info=yes|no allows to control the reading
  of the dwarf debug information describing inlined function calls.
  When this debug info is read, stacktraces will properly show inlined
  function calls.

* Address description logic has been improved and is now common 
  between memcheck and helgrind, resulting in better address
  descriptions for some error messages.

* New and modified GDB server monitor features:
